samples/_failures_safe/1761787935_8778dc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_668829dd.c: In function ‘get_user_event’:
./samples/SAFE/__tmp_668829dd.c:174:5: error: expected declaration or statement at end of input
  174 |     char input[16];
      |     ^~~~
